--- a/person.toml
+++ b/person.toml
@@ -79,7 +79,7 @@ name = "Ramires"
                [country = "España",
                 city = "Barcelona",
                 streat = "Lope_de_Vega",
-                number == 191]]
+                number = 191]]
 
 name = "Lucia"
   last_name" = "Rodriges"
